syntax = "proto3";

package urlshortener;

option go_package = "github.com/sashaaro/url-shortener/proto";

// Сервис для обработки URL

service URLShortener {
  // Создать короткий URL
  rpc CreateShort (CreateShortRequest) returns (CreateShortResponse);

  // Получить оригинальный URL по короткому
  rpc GetOriginLink (GetOriginLinkRequest) returns (GetOriginLinkResponse);

  // Укоротить URL через API
  rpc Shorten (ShortenRequest) returns (ShortenResponse);

  // Получить все URL пользователя
  rpc GetUserUrls (GetUserUrlsRequest) returns (GetUserUrlsResponse);

  // Удалить URL пользователя
  rpc DeleteUrls (DeleteUrlsRequest) returns (DeleteUrlsResponse);

  // Получить статистику по URL
  rpc GetStats (StatsRequest) returns (StatsResponse);

  // Проверка доступности сервера
  rpc Ping (PingRequest) returns (PongResponse);
}

// Запрос на создание короткого URL
message CreateShortRequest {
  string url = 1;
  string user_id = 2;
}

// Ответ на создание короткого URL
message CreateShortResponse {
  string short_url = 1;
}

// Запрос на получение оригинального URL по короткому
message GetOriginLinkRequest {
  string hash = 1;
  string user_id = 2;
}

// Ответ на получение оригинального URL по короткому
message GetOriginLinkResponse {
  string original_url = 1;
}

// Запрос на укорочение URL через API
message ShortenRequest {
  string url = 1;
  string user_id = 2;
}

// Ответ на укорочение URL через API
message ShortenResponse {
  string result = 1;
}

// Запрос на получение всех URL пользователя
message GetUserUrlsRequest {
  string user_id = 1;
}

// Ответ на получение всех URL пользователя
message GetUserUrlsResponse {
  repeated string urls = 1;
}

// Запрос на удаление URL пользователя
message DeleteUrlsRequest {
  repeated string keys = 1;
  string user_id = 2;
}

// Ответ на удаление URL пользователя
message DeleteUrlsResponse {}

// Запрос на получение статистики
message StatsRequest {}

// Ответ на получение статистики
message StatsResponse {
  int64 urls = 1;
  int64 users = 2;
}

// Запрос на проверку доступности
message PingRequest {}

// Ответ на проверку доступности
message PongResponse {
  bool success = 1;
}